--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts:
   animated_bottom_navigation_bar:
+  flutter_inset_box_shadow:
 
 
 dev_dependencies:
