--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   flutter_inset_box_shadow:
   step_progress_indicator:
   flutter_rating_bar:
+  http: ^1.1.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
 
 dev_dependencies:
@@ -53,6 +56,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   rename: ^2.1.1
+  build_runner: ^2.4.6
+  freezed: ^2.4.1
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
