--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   path_provider: 
   permission_handler: 
   dio:
+  flutter_localizations:
+    sdk: flutter
 
 
 dev_dependencies:
@@ -79,6 +81,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
