--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  google_mobile_ads: ^3.0.0
+  pay: ^1.1.2
+  share_plus: ^3.0.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -40,6 +43,7 @@ dependencies:
   step_progress_indicator:
   flutter_rating_bar:
   http: ^1.1.0
+
   # freezed_annotation: ^2.4.1
   # json_annotation: ^4.8.1
   provider:
