--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   google_mobile_ads: ^3.0.0
   pay: ^1.1.2
+  crossword: ^0.0.3
   share_plus: ^4.0.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
