--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   freezed: ^2.4.1
   json_serializable: ^6.7.1
+  just_audio: ^0.9.34
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -96,6 +97,17 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/audio/
+  fonts:
+      - family: Inter
+        fonts:
+          - asset: assets/fonts/Inter-Regular.otf
+          - asset: assets/fonts/Inter-Medium.otf
+          - asset: assets/fonts/Inter-Bold.otf
+          - asset: assets/fonts/Inter-SemiBold.otf
+            style: normal
+
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
