Changed logo, name, fixed leaderboards, matchmaking, search

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,15 +5,15 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Crossword</string>
+	<string>Werkos</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>com.werkosgames.werkos</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Crossword</string>
+	<string>Werkos</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -48,7 +48,7 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>GADApplicationIdentifier</key>
-    	<string>ca-app-pub-3940256099942544~3347511713</string>
+    	<string>ca-app-pub-3736420404472867~1146006887</string>
     	<key>SKAdNetworkItems</key>
       <array>
         <dict>
