--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mobile_app_word_search
+name: werkos
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -31,9 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  google_mobile_ads: ^3.0.0
-  pay: ^1.1.2
-  share_plus: ^4.0.4
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -43,6 +41,10 @@ dependencies:
   step_progress_indicator:
   flutter_rating_bar:
   http: ^1.1.0
+  google_mobile_ads: ^3.0.0
+  pay: ^1.1.2
+  crossword: ^0.0.3
+  share_plus: ^4.0.4
 
   # freezed_annotation: ^2.4.1
   # json_annotation: ^4.8.1
@@ -62,6 +64,7 @@ dependencies:
   # dio:
   flutter_localizations:
     sdk: flutter
+  change_app_package_name: ^1.1.0
 
 
 dev_dependencies:
@@ -78,6 +81,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   freezed: ^2.4.1
   json_serializable: ^6.7.1
+  just_audio: ^0.9.34
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -95,6 +99,17 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/audio/
+#  fonts:
+#      - family: Inter
+#        fonts:
+#          - asset: assets/fonts/Inter-Regular.otf
+#          - asset: assets/fonts/Inter-Medium.otf
+#          - asset: assets/fonts/Inter-Bold.otf
+#          - asset: assets/fonts/Inter-SemiBold.otf
+#            style: normal
+
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
